Fix sonarcloud issues